Flags made on all fields

--- a/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# GAMA-12 - Merging HELP data products\n",
     "\n",
@@ -15,7 +18,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -40,7 +45,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -60,7 +67,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -73,7 +82,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Reading the masterlist, XID+, and photo-z catalogues"
    ]
@@ -82,7 +94,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -97,7 +111,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -122,7 +138,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -164,57 +182,61 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "# # XID+ SPIRE\n",
+    "# XID+ SPIRE\n",
     "\n",
-    "# xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
-    "#                          \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
-    "# xid_spire.meta = None\n",
+    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_GAMA-12/data/\"\n",
+    "                         \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
+    "xid_spire.meta = None\n",
     "\n",
-    "# xid_spire['HELP_ID'].name = \"help_id\"\n",
+    "xid_spire['HELP_ID'].name = \"help_id\"\n",
     "\n",
-    "# # Convert from mJy to μJy\n",
-    "# for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
-    "#             \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
-    "#             \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
-    "#     xid_spire[col] *= 1000\n",
+    "# Convert from mJy to μJy\n",
+    "for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
+    "            \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
+    "            \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
+    "    xid_spire[col] *= 1000\n",
     "\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
-    "#                  xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_250\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
-    "#                  xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_350\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
-    "#                  xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_500\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
+    "                 xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_250\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
+    "                 xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_350\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
+    "                 xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_500\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
-    "# xid_spire = xid_spire['help_id',\n",
-    "#                       'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
-    "#                       'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
-    "#                       'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
+    "xid_spire = xid_spire['help_id',\n",
+    "                      'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
+    "                      'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
+    "                      'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -233,7 +255,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -255,7 +279,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Merging"
    ]
@@ -264,7 +291,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -283,7 +312,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -302,30 +333,35 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "merged_table = ml\n",
+    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
     "        \n",
-    "# # Fill values\n",
-    "# for col in xid_spire.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_spire.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "merged_table = ml\n",
+    "\n",
     "merged_table = join(merged_table, photoz, join_type='left')\n",
     "\n",
     "# Fill values\n",
@@ -335,7 +371,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Saving the catalogue for CIGALE (first run)"
    ]
@@ -344,7 +383,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -370,7 +411,8 @@
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    # assert set(columns) == set(merged_table.colnames)\n",
+    "    print(set(columns) - set(merged_table.colnames)) \n",
+    "    print(set(merged_table.colnames) - set(columns)  ) \n",
     "    \n",
     "    \n",
     "    merged_table.write(\"data/GAMA-12_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
@@ -378,7 +420,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Merging CIGALE outputs\n",
     "\n",
@@ -389,14 +434,16 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_GAMA-12/data/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -439,7 +486,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -458,7 +507,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Sorting columns\n",
     "\n",
@@ -469,7 +521,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -484,7 +538,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -511,7 +567,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -523,7 +581,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Saving"
    ]
@@ -532,13 +593,15 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/GAMA-12.fits\")"
    ]
   }
  ],
