--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,11 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 205\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 246\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 261\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 268\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 239\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 228\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 196\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 208\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 109\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 100\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry cat \n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -122,11 +154,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IRAC i1\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i2\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "irac_mag = 3.9000000001085695\n",
     "bands = [\"IRAC i1\", \"IRAC i2\"]\n",
@@ -153,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -215,11 +260,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probably no aperture mag on m_ap_megacam_g or m_ap_gpc1_g\n",
+      "Probably no aperture mag on m_megacam_g or m_gpc1_g\n",
+      "Probably no aperture mag on m_ap_megacam_r or m_ap_gpc1_r\n",
+      "Probably no aperture mag on m_megacam_r or m_gpc1_r\n",
+      "Probably no aperture mag on m_ap_megacam_i or m_ap_gpc1_i\n",
+      "Probably no aperture mag on m_megacam_i or m_gpc1_i\n",
+      "Probably no aperture mag on m_ap_megacam_z or m_ap_gpc1_z\n",
+      "Probably no aperture mag on m_megacam_z or m_gpc1_z\n",
+      "Probably no aperture mag on m_ap_gpc1_y or m_ap_wircam_y\n",
+      "Probably no aperture mag on m_gpc1_y or m_wircam_y\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -250,7 +312,7 @@
     "                          master_catalogue[flagcol1], master_catalogue[flagcol2],\n",
     "                          labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))\n",
     "        except KeyError:\n",
-    "            print(\"Probably no total mag on {} or {}\".format(col1, col2))\n",
+    "            print(\"Probably no aperture mag on {} or {}\".format(col1, col2))\n",
     "                      "
    ]
   },
@@ -263,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
