--- a/dmu6/dmu6_v_AKARI-SEP/4_flags_akari-sep.ipynb
+++ b/dmu6/dmu6_v_AKARI-SEP/4_flags_akari-sep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -31,13 +31,13 @@
    "source": [
     "SUFFIX = \"20180221\"\n",
     "FIELD = \"AKARI-SEP\"\n",
-    "catname = \"../../dmu1/dmu1_ml_AKARI-NEP/data/master_catalogue_akari-sep_{}.fits\".format(SUFFIX)\n",
+    "catname = \"../../dmu1/dmu1_ml_AKARI-SEP/data/master_catalogue_akari-sep_{}.fits\".format(SUFFIX)\n",
     "master_catalogue = Table.read(catname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,11 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IRAC i1\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i2\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "irac_mag = 3.9000000001085695\n",
     "bands = [\"IRAC i1\", \"IRAC i2\"]\n",
@@ -127,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
