--- a/dmu6/dmu6_v_Bootes/4_flags_bootes.ipynb
+++ b/dmu6/dmu6_v_Bootes/4_flags_bootes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -90,11 +90,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 88\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 97\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 167\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 155\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 140\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 142\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 132\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 121\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 51\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 53\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry cat \n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -125,11 +157,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IRAC i1\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i2\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i3\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i4\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "irac_mag = 3.9000000001085695\n",
     "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
@@ -156,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -218,11 +269,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probably no aperture mag on m_ap_decam_g or m_ap_gpc1_g\n",
+      "Probably no aperture mag on m_decam_g or m_gpc1_g\n",
+      "Probably no aperture mag on m_ap_decam_g or m_ap_bass_g\n",
+      "Probably no aperture mag on m_decam_g or m_bass_g\n",
+      "Probably no aperture mag on m_ap_gpc1_g or m_ap_bass_g\n",
+      "Probably no aperture mag on m_gpc1_g or m_bass_g\n",
+      "Probably no aperture mag on m_ap_decam_r or m_ap_gpc1_r\n",
+      "Probably no aperture mag on m_decam_r or m_gpc1_r\n",
+      "Probably no aperture mag on m_ap_decam_r or m_ap_bass_r\n",
+      "Probably no aperture mag on m_decam_r or m_bass_r\n",
+      "Probably no aperture mag on m_ap_decam_r or m_ap_mosaic_r\n",
+      "Probably no aperture mag on m_decam_r or m_mosaic_r\n",
+      "Probably no aperture mag on m_ap_gpc1_r or m_ap_bass_r\n",
+      "Probably no aperture mag on m_gpc1_r or m_bass_r\n",
+      "Probably no aperture mag on m_ap_gpc1_r or m_ap_mosaic_r\n",
+      "Probably no aperture mag on m_gpc1_r or m_mosaic_r\n",
+      "Probably no aperture mag on m_ap_bass_r or m_ap_mosaic_r\n",
+      "Probably no aperture mag on m_bass_r or m_mosaic_r\n",
+      "Probably no aperture mag on m_ap_gpc1_i or m_ap_mosaic_i\n",
+      "Probably no aperture mag on m_gpc1_i or m_mosaic_i\n",
+      "Probably no aperture mag on m_ap_decam_z or m_ap_gpc1_z\n",
+      "Probably no aperture mag on m_decam_z or m_gpc1_z\n",
+      "Probably no aperture mag on m_ap_decam_z or m_ap_bass_z\n",
+      "Probably no aperture mag on m_decam_z or m_bass_z\n",
+      "Probably no aperture mag on m_ap_decam_z or m_ap_90prime_z\n",
+      "Probably no aperture mag on m_decam_z or m_90prime_z\n",
+      "Probably no aperture mag on m_ap_gpc1_z or m_ap_bass_z\n",
+      "Probably no aperture mag on m_gpc1_z or m_bass_z\n",
+      "Probably no aperture mag on m_ap_gpc1_z or m_ap_90prime_z\n",
+      "Probably no aperture mag on m_gpc1_z or m_90prime_z\n",
+      "Probably no aperture mag on m_ap_bass_z or m_ap_90prime_z\n",
+      "Probably no aperture mag on m_bass_z or m_90prime_z\n",
+      "Probably no aperture mag on m_ap_newfirm_j or m_ap_wfcam_j\n",
+      "Probably no aperture mag on m_newfirm_j or m_wfcam_j\n",
+      "Probably no aperture mag on m_ap_newfirm_k or m_ap_mosaic_k\n",
+      "Probably no aperture mag on m_newfirm_k or m_mosaic_k\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -266,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
