--- a/dmu6/dmu6_v_CDFS-SWIRE/4_flags_cdfs-swire.ipynb
+++ b/dmu6/dmu6_v_CDFS-SWIRE/4_flags_cdfs-swire.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -88,11 +88,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 103\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 120\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 78\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 67\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 42\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS stack cat \n",
     "gpc1_err = 0.05000000074505806\n",
@@ -124,11 +156,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IRAC i1\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i2\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i3\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i4\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "irac_mag = 3.9000000001085695\n",
     "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
@@ -155,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -217,11 +268,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probably no aperture mag on m_ap_omegacam_u or m_ap_wfi_u\n",
+      "Probably no aperture mag on m_omegacam_u or m_wfi_u\n",
+      "Probably no aperture mag on m_ap_omegacam_g or m_ap_gpc1_g\n",
+      "Probably no aperture mag on m_omegacam_g or m_gpc1_g\n",
+      "Probably no aperture mag on m_ap_omegacam_g or m_ap_decam_g\n",
+      "Probably no aperture mag on m_omegacam_g or m_decam_g\n",
+      "Probably no aperture mag on m_ap_gpc1_g or m_ap_decam_g\n",
+      "Probably no aperture mag on m_gpc1_g or m_decam_g\n",
+      "Probably no aperture mag on m_ap_omegacam_r or m_ap_wfi_r\n",
+      "Probably no aperture mag on m_omegacam_r or m_wfi_r\n",
+      "Probably no aperture mag on m_ap_omegacam_r or m_ap_gpc1_r\n",
+      "Probably no aperture mag on m_omegacam_r or m_gpc1_r\n",
+      "Probably no aperture mag on m_ap_omegacam_r or m_ap_decam_r\n",
+      "Probably no aperture mag on m_omegacam_r or m_decam_r\n",
+      "Probably no aperture mag on m_ap_wfi_r or m_ap_gpc1_r\n",
+      "Probably no aperture mag on m_wfi_r or m_gpc1_r\n",
+      "Probably no aperture mag on m_ap_wfi_r or m_ap_decam_r\n",
+      "Probably no aperture mag on m_wfi_r or m_decam_r\n",
+      "Probably no aperture mag on m_ap_gpc1_r or m_ap_decam_r\n",
+      "Probably no aperture mag on m_gpc1_r or m_decam_r\n",
+      "Probably no aperture mag on m_ap_omegacam_i or m_ap_wfi_i\n",
+      "Probably no aperture mag on m_omegacam_i or m_wfi_i\n",
+      "Probably no aperture mag on m_ap_omegacam_i or m_ap_gpc1_i\n",
+      "Probably no aperture mag on m_omegacam_i or m_gpc1_i\n",
+      "Probably no aperture mag on m_ap_omegacam_i or m_ap_decam_i\n",
+      "Probably no aperture mag on m_omegacam_i or m_decam_i\n",
+      "Probably no aperture mag on m_ap_wfi_i or m_ap_gpc1_i\n",
+      "Probably no aperture mag on m_wfi_i or m_gpc1_i\n",
+      "Probably no aperture mag on m_ap_wfi_i or m_ap_decam_i\n",
+      "Probably no aperture mag on m_wfi_i or m_decam_i\n",
+      "Probably no aperture mag on m_ap_gpc1_i or m_ap_decam_i\n",
+      "Probably no aperture mag on m_gpc1_i or m_decam_i\n",
+      "Probably no aperture mag on m_ap_omegacam_z or m_ap_gpc1_z\n",
+      "Probably no aperture mag on m_omegacam_z or m_gpc1_z\n",
+      "Probably no aperture mag on m_ap_omegacam_z or m_ap_decam_z\n",
+      "Probably no aperture mag on m_omegacam_z or m_decam_z\n",
+      "Probably no aperture mag on m_ap_omegacam_z or m_ap_vista_z\n",
+      "Probably no aperture mag on m_omegacam_z or m_vista_z\n",
+      "Probably no aperture mag on m_ap_gpc1_z or m_ap_decam_z\n",
+      "Probably no aperture mag on m_gpc1_z or m_decam_z\n",
+      "Probably no aperture mag on m_ap_gpc1_z or m_ap_vista_z\n",
+      "Probably no aperture mag on m_gpc1_z or m_vista_z\n",
+      "Probably no aperture mag on m_ap_decam_z or m_ap_vista_z\n",
+      "Probably no aperture mag on m_decam_z or m_vista_z\n",
+      "Probably no aperture mag on m_ap_gpc1_y or m_ap_decam_y\n",
+      "Probably no aperture mag on m_gpc1_y or m_decam_y\n",
+      "Probably no aperture mag on m_ap_gpc1_y or m_ap_vista_y\n",
+      "Probably no aperture mag on m_gpc1_y or m_vista_y\n",
+      "Probably no aperture mag on m_ap_decam_y or m_ap_vista_y\n",
+      "Probably no aperture mag on m_decam_y or m_vista_y\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -265,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
