--- a/dmu6/dmu6_v_HDF-N/4_flags_hdf-n.ipynb
+++ b/dmu6/dmu6_v_HDF-N/4_flags_hdf-n.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,11 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 6\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 7\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 9\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 9\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 7\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 10\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 4\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 5\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 2\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 2\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry catalogue\n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -123,11 +155,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUPRIME r (aperture) - GPC1 r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME r (total) - GPC1 r (total):\n",
+      "  Number of outliers: 0\n",
+      "One of m_ap_gpc1_i and m_ap_suprime_i is not present in the catalogue.\n",
+      "One of m_gpc1_i and m_suprime_i is not present in the catalogue.\n",
+      "One of m_ap_gpc1_z and m_ap_suprime_z is not present in the catalogue.\n",
+      "One of m_gpc1_z and m_suprime_z is not present in the catalogue.\n",
+      "One of m_ap_wircam_k and m_ap_moircs_k is not present in the catalogue.\n",
+      "One of m_wircam_k and m_moircs_k is not present in the catalogue.\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -173,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
