--- a/dmu6/dmu6_v_SPIRE-NEP/4_flags_spire-nep.ipynb
+++ b/dmu6/dmu6_v_SPIRE-NEP/4_flags_spire-nep.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -83,11 +83,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 6\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 7\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 3\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 3\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 2\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 2\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 4\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 3\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 3\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 3\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry catalogue\n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -119,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
