--- a/dmu6/dmu6_v_xFLS/4_flags_xfls.ipynb
+++ b/dmu6/dmu6_v_xFLS/4_flags_xfls.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "SUFFIX = \"20180502\"\n",
+    "SUFFIX = \"20180501\"\n",
     "FIELD = \"xFLS\"\n",
     "catname = \"../../dmu1/dmu1_ml_xFLS/data/master_catalogue_xfls_{}.fits\".format(SUFFIX)\n",
     "master_catalogue = Table.read(catname)"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,11 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 208\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 216\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 252\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 280\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 168\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 173\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 117\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 126\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 46\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 48\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry catalogue\n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -123,11 +155,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IRAC i1\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i2\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i3\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i4\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "irac_mag = 3.9000000001085695\n",
     "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
@@ -154,11 +205,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g (aperture) - WFC g (aperture):\n",
+      "  Number of outliers: 2\n",
+      "GPC1 g (total) - WFC g (total):\n",
+      "  Number of outliers: 0\n",
+      "One of m_ap_wfc_g and m_ap_bass_g is not present in the catalogue.\n",
+      "One of m_wfc_g and m_bass_g is not present in the catalogue.\n",
+      "One of m_ap_gpc1_g and m_ap_bass_g is not present in the catalogue.\n",
+      "One of m_gpc1_g and m_bass_g is not present in the catalogue.\n",
+      "GPC1 r (aperture) - WFC r (aperture):\n",
+      "  Number of outliers: 11\n",
+      "GPC1 r (total) - WFC r (total):\n",
+      "  Number of outliers: 4\n",
+      "One of m_ap_wfc_r and m_ap_bass_r is not present in the catalogue.\n",
+      "One of m_wfc_r and m_bass_r is not present in the catalogue.\n",
+      "One of m_ap_gpc1_r and m_ap_bass_r is not present in the catalogue.\n",
+      "One of m_gpc1_r and m_bass_r is not present in the catalogue.\n",
+      "GPC1 z (aperture) - WFC z (aperture):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 z (total) - WFC z (total):\n",
+      "  Number of outliers: 0\n",
+      "One of m_ap_wfc_z and m_ap_bass_z is not present in the catalogue.\n",
+      "One of m_wfc_z and m_bass_z is not present in the catalogue.\n",
+      "One of m_ap_gpc1_z and m_ap_bass_z is not present in the catalogue.\n",
+      "One of m_gpc1_z and m_bass_z is not present in the catalogue.\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -204,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
