--- a/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
+++ b/dmu6/dmu6_v_EGS/4_flags_egs.ipynb
@@ -184,19 +184,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WIRCS K\n",
-      "  Aperture magnitude\n",
-      "    Number of flagged objects: 26\n",
-      "  Total magnitude\n",
-      "    Number of flagged objects: 58\n"
+      "WIRCS K\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in greater_equal\n",
       "  return getattr(self.data, op)(other)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 26\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 58\n"
      ]
     }
    ],
@@ -229,217 +235,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Megacam u MMT u\n",
       "No sources have both Megacam u (aperture) and MMT u (aperture) values.\n",
       "\n",
       "MMT u (total) - Megacam u (total):\n",
       "  Number of outliers: 0\n",
-      "Megacam g SUPRIME g\n",
       "SUPRIME g (aperture) - Megacam g (aperture):\n",
       "  Number of outliers: 4\n",
       "SUPRIME g (total) - Megacam g (total):\n",
       "  Number of outliers: 4\n",
-      "Megacam g GPC1 g\n",
       "GPC1 g (aperture) - Megacam g (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 g (total) - Megacam g (total):\n",
       "  Number of outliers: 2\n",
-      "Megacam g BASS g\n",
-      "One of m_ap_megacam_g and m_ap_bass_g is not present in the catalogue.\n",
-      "One of m_megacam_g and m_bass_g is not present in the catalogue.\n",
-      "Megacam g MMT g\n",
+      "90Prime g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 387\n",
+      "90Prime g (total) - Megacam g (total):\n",
+      "  Number of outliers: 97\n",
       "No sources have both Megacam g (aperture) and MMT g (aperture) values.\n",
       "\n",
       "MMT g (total) - Megacam g (total):\n",
       "  Number of outliers: 495\n",
-      "SUPRIME g GPC1 g\n",
       "GPC1 g (aperture) - SUPRIME g (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 g (total) - SUPRIME g (total):\n",
       "  Number of outliers: 0\n",
-      "SUPRIME g BASS g\n",
-      "One of m_ap_suprime_g and m_ap_bass_g is not present in the catalogue.\n",
-      "One of m_suprime_g and m_bass_g is not present in the catalogue.\n",
-      "SUPRIME g MMT g\n",
+      "90Prime g (aperture) - SUPRIME g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "90Prime g (total) - SUPRIME g (total):\n",
+      "  Number of outliers: 3\n",
       "No sources have both SUPRIME g (aperture) and MMT g (aperture) values.\n",
       "\n",
       "MMT g (total) - SUPRIME g (total):\n",
       "  Number of outliers: 1\n",
-      "GPC1 g BASS g\n",
-      "One of m_ap_gpc1_g and m_ap_bass_g is not present in the catalogue.\n",
-      "One of m_gpc1_g and m_bass_g is not present in the catalogue.\n",
-      "GPC1 g MMT g\n",
+      "90Prime g (aperture) - GPC1 g (aperture):\n",
+      "  Number of outliers: 19\n",
+      "90Prime g (total) - GPC1 g (total):\n",
+      "  Number of outliers: 6\n",
       "No sources have both GPC1 g (aperture) and MMT g (aperture) values.\n",
       "\n",
       "MMT g (total) - GPC1 g (total):\n",
       "  Number of outliers: 0\n",
-      "BASS g MMT g\n",
-      "One of m_ap_bass_g and m_ap_mmt_g is not present in the catalogue.\n",
-      "One of m_bass_g and m_mmt_g is not present in the catalogue.\n",
-      "Megacam r SUPRIME r\n",
+      "No sources have both 90Prime g (aperture) and MMT g (aperture) values.\n",
+      "\n",
+      "MMT g (total) - 90Prime g (total):\n",
+      "  Number of outliers: 2\n",
       "SUPRIME r (aperture) - Megacam r (aperture):\n",
       "  Number of outliers: 5\n",
       "SUPRIME r (total) - Megacam r (total):\n",
       "  Number of outliers: 4\n",
-      "Megacam r GPC1 r\n",
       "GPC1 r (aperture) - Megacam r (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 r (total) - Megacam r (total):\n",
       "  Number of outliers: 4\n",
-      "Megacam r BASS r\n",
-      "One of m_ap_megacam_r and m_ap_bass_r is not present in the catalogue.\n",
-      "One of m_megacam_r and m_bass_r is not present in the catalogue.\n",
-      "SUPRIME r GPC1 r\n",
+      "90Prime r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "90Prime r (total) - Megacam r (total):\n",
+      "  Number of outliers: 6\n",
       "GPC1 r (aperture) - SUPRIME r (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 r (total) - SUPRIME r (total):\n",
       "  Number of outliers: 0\n",
-      "SUPRIME r BASS r\n",
-      "One of m_ap_suprime_r and m_ap_bass_r is not present in the catalogue.\n",
-      "One of m_suprime_r and m_bass_r is not present in the catalogue.\n",
-      "GPC1 r BASS r\n",
-      "One of m_ap_gpc1_r and m_ap_bass_r is not present in the catalogue.\n",
-      "One of m_gpc1_r and m_bass_r is not present in the catalogue.\n",
-      "Megacam i SUPRIME i\n",
+      "90Prime r (aperture) - SUPRIME r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "90Prime r (total) - SUPRIME r (total):\n",
+      "  Number of outliers: 5\n",
+      "90Prime r (aperture) - GPC1 r (aperture):\n",
+      "  Number of outliers: 504\n",
+      "90Prime r (total) - GPC1 r (total):\n",
+      "  Number of outliers: 0\n",
       "SUPRIME i (aperture) - Megacam i (aperture):\n",
       "  Number of outliers: 28\n",
       "SUPRIME i (total) - Megacam i (total):\n",
       "  Number of outliers: 5\n",
-      "Megacam i GPC1 i\n",
       "GPC1 i (aperture) - Megacam i (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 i (total) - Megacam i (total):\n",
       "  Number of outliers: 4\n",
-      "Megacam i MMT i\n",
       "No sources have both Megacam i (aperture) and MMT i (aperture) values.\n",
       "\n",
       "MMT i (total) - Megacam i (total):\n",
       "  Number of outliers: 20\n",
-      "SUPRIME i GPC1 i\n",
       "GPC1 i (aperture) - SUPRIME i (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 i (total) - SUPRIME i (total):\n",
       "  Number of outliers: 10\n",
-      "SUPRIME i MMT i\n",
       "No sources have both SUPRIME i (aperture) and MMT i (aperture) values.\n",
       "\n",
       "MMT i (total) - SUPRIME i (total):\n",
       "  Number of outliers: 2\n",
-      "GPC1 i MMT i\n",
       "No sources have both GPC1 i (aperture) and MMT i (aperture) values.\n",
       "\n",
       "MMT i (total) - GPC1 i (total):\n",
       "  Number of outliers: 2\n",
-      "Megacam z SUPRIME z\n",
       "SUPRIME z (aperture) - Megacam z (aperture):\n",
       "  Number of outliers: 3\n",
       "SUPRIME z (total) - Megacam z (total):\n",
       "  Number of outliers: 5\n",
-      "Megacam z GPC1 z\n",
       "GPC1 z (aperture) - Megacam z (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 z (total) - Megacam z (total):\n",
       "  Number of outliers: 4\n",
-      "Megacam z BASS z\n",
-      "One of m_ap_megacam_z and m_ap_bass_z is not present in the catalogue.\n",
-      "One of m_megacam_z and m_bass_z is not present in the catalogue.\n",
-      "Megacam z MMT z\n",
+      "Mosaic z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Mosaic z (total) - Megacam z (total):\n",
+      "  Number of outliers: 0\n",
       "No sources have both Megacam z (aperture) and MMT z (aperture) values.\n",
       "\n",
       "MMT z (total) - Megacam z (total):\n",
       "  Number of outliers: 26\n",
-      "SUPRIME z GPC1 z\n",
       "GPC1 z (aperture) - SUPRIME z (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 z (total) - SUPRIME z (total):\n",
       "  Number of outliers: 1\n",
-      "SUPRIME z BASS z\n",
-      "One of m_ap_suprime_z and m_ap_bass_z is not present in the catalogue.\n",
-      "One of m_suprime_z and m_bass_z is not present in the catalogue.\n",
-      "SUPRIME z MMT z\n",
+      "Mosaic z (aperture) - SUPRIME z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Mosaic z (total) - SUPRIME z (total):\n",
+      "  Number of outliers: 0\n",
       "No sources have both SUPRIME z (aperture) and MMT z (aperture) values.\n",
       "\n",
       "MMT z (total) - SUPRIME z (total):\n",
       "  Number of outliers: 0\n",
-      "GPC1 z BASS z\n",
-      "One of m_ap_gpc1_z and m_ap_bass_z is not present in the catalogue.\n",
-      "One of m_gpc1_z and m_bass_z is not present in the catalogue.\n",
-      "GPC1 z MMT z\n",
+      "Mosaic z (aperture) - GPC1 z (aperture):\n",
+      "  Number of outliers: 531\n",
+      "Mosaic z (total) - GPC1 z (total):\n",
+      "  Number of outliers: 0\n",
       "No sources have both GPC1 z (aperture) and MMT z (aperture) values.\n",
       "\n",
       "MMT z (total) - GPC1 z (total):\n",
       "  Number of outliers: 2\n",
-      "BASS z MMT z\n",
-      "One of m_ap_bass_z and m_ap_mmt_z is not present in the catalogue.\n",
-      "One of m_bass_z and m_mmt_z is not present in the catalogue.\n",
-      "SUPRIME y GPC1 y\n",
+      "No sources have both Mosaic z (aperture) and MMT z (aperture) values.\n",
+      "\n",
+      "MMT z (total) - Mosaic z (total):\n",
+      "  Number of outliers: 0\n",
       "GPC1 y (aperture) - SUPRIME y (aperture):\n",
       "  Number of outliers: 0\n",
       "GPC1 y (total) - SUPRIME y (total):\n",
       "  Number of outliers: 0\n",
-      "WIRCAM J WIRCS J\n",
       "No sources have both WIRCAM J (aperture) and WIRCS J (aperture) values.\n",
       "\n",
       "WIRCS J (total) - WIRCAM J (total):\n",
       "  Number of outliers: 2\n",
-      "WIRCAM J UKIDSS J\n",
       "UKIDSS J (aperture) - WIRCAM J (aperture):\n",
       "  Number of outliers: 13\n",
       "UKIDSS J (total) - WIRCAM J (total):\n",
       "  Number of outliers: 71\n",
-      "WIRCAM J OMEGA2000 J\n",
       "No sources have both WIRCAM J (aperture) and OMEGA2000 J (aperture) values.\n",
       "\n",
       "OMEGA2000 J (total) - WIRCAM J (total):\n",
       "  Number of outliers: 1\n",
-      "WIRCS J UKIDSS J\n",
       "No sources have both WIRCS J (aperture) and UKIDSS J (aperture) values.\n",
       "\n",
       "UKIDSS J (total) - WIRCS J (total):\n",
       "  Number of outliers: 1\n",
-      "WIRCS J OMEGA2000 J\n",
       "No sources have both WIRCS J (aperture) and OMEGA2000 J (aperture) values.\n",
       "\n",
       "OMEGA2000 J (total) - WIRCS J (total):\n",
       "  Number of outliers: 0\n",
-      "UKIDSS J OMEGA2000 J\n",
       "No sources have both UKIDSS J (aperture) and OMEGA2000 J (aperture) values.\n",
       "\n",
       "OMEGA2000 J (total) - UKIDSS J (total):\n",
       "  Number of outliers: 2\n",
-      "WIRCAM Ks WIRCS K\n",
       "WIRCS K (aperture) - WIRCAM Ks (aperture):\n",
       "  Number of outliers: 21\n",
       "WIRCS K (total) - WIRCAM Ks (total):\n",
       "  Number of outliers: 7\n",
-      "WIRCAM Ks NEWFIRM K\n",
       "No sources have both WIRCAM Ks (aperture) and NEWFIRM K (aperture) values.\n",
       "\n",
       "NEWFIRM K (total) - WIRCAM Ks (total):\n",
       "  Number of outliers: 0\n",
-      "WIRCAM Ks OMEGA2000 Ks\n",
       "No sources have both WIRCAM Ks (aperture) and OMEGA2000 Ks (aperture) values.\n",
       "\n",
       "OMEGA2000 Ks (total) - WIRCAM Ks (total):\n",
       "  Number of outliers: 0\n",
-      "WIRCS K NEWFIRM K\n",
       "No sources have both WIRCS K (aperture) and NEWFIRM K (aperture) values.\n",
       "\n",
       "NEWFIRM K (total) - WIRCS K (total):\n",
       "  Number of outliers: 0\n",
-      "WIRCS K OMEGA2000 Ks\n",
       "No sources have both WIRCS K (aperture) and OMEGA2000 Ks (aperture) values.\n",
       "\n",
       "OMEGA2000 Ks (total) - WIRCS K (total):\n",
       "  Number of outliers: 0\n",
-      "NEWFIRM K OMEGA2000 Ks\n",
       "No sources have both NEWFIRM K (aperture) and OMEGA2000 Ks (aperture) values.\n",
       "\n",
       "OMEGA2000 Ks (total) - NEWFIRM K (total):\n",
@@ -492,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
