--- a/dmu6/dmu6_v_ELAIS-N1/4_flags_elais-n1.ipynb
+++ b/dmu6/dmu6_v_ELAIS-N1/4_flags_elais-n1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -90,11 +90,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 107\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 174\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 4\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 150\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 70\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 37\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS stack cat \n",
     "gpc1_err = 0.05000000074505806\n",
@@ -126,11 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IRAC i1\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i2\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i3\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i4\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "irac_mag = 3.9000000001085695\n",
     "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
@@ -157,15 +208,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Megacam u (aperture) - WFC u (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam u (total) - WFC u (total):\n",
+      "  Number of outliers: 0\n",
+      "Megacam g (aperture) - WFC g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam g (total) - WFC g (total):\n",
+      "  Number of outliers: 35\n",
+      "SUPRIME g (aperture) - WFC g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME g (total) - WFC g (total):\n",
+      "  Number of outliers: 6\n",
+      "GPC1 g (aperture) - WFC g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - WFC g (total):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 1\n",
+      "SUPRIME g (total) - Megacam g (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - Megacam g (total):\n",
+      "  Number of outliers: 752\n",
+      "GPC1 g (aperture) - SUPRIME g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - SUPRIME g (total):\n",
+      "  Number of outliers: 23\n",
+      "Megacam r (aperture) - WFC r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam r (total) - WFC r (total):\n",
+      "  Number of outliers: 22\n",
+      "SUPRIME r (aperture) - WFC r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME r (total) - WFC r (total):\n",
+      "  Number of outliers: 6\n",
+      "GPC1 r (aperture) - WFC r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - WFC r (total):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME r (total) - Megacam r (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - Megacam r (total):\n",
+      "  Number of outliers: 584\n",
+      "GPC1 r (aperture) - SUPRIME r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - SUPRIME r (total):\n",
+      "  Number of outliers: 31\n",
+      "SUPRIME i (aperture) - WFC i (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME i (total) - WFC i (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (aperture) - WFC i (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (total) - WFC i (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (aperture) - SUPRIME i (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (total) - SUPRIME i (total):\n",
+      "  Number of outliers: 161\n",
+      "Megacam z (aperture) - WFC z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam z (total) - WFC z (total):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME z (aperture) - WFC z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME z (total) - WFC z (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (aperture) - WFC z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - WFC z (total):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 6\n",
+      "SUPRIME z (total) - Megacam z (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - Megacam z (total):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 z (aperture) - SUPRIME z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - SUPRIME z (total):\n",
+      "  Number of outliers: 28\n",
+      "GPC1 y (aperture) - SUPRIME y (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 y (total) - SUPRIME y (total):\n",
+      "  Number of outliers: 9\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
-    "        #print(band1, band2)\n",
     "\n",
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
     "        \n",
@@ -174,27 +323,23 @@
     "        ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
     "        flagcol1, flagcol2 = \"flag_ap_{}\".format(basecol1), \"flag_ap_{}\".format(basecol2)\n",
     "        \n",
-    "        try:\n",
-    "            master_catalogue = flag_outliers(master_catalogue, col1, col2,\n",
+    "        \n",
+    "        master_catalogue = flag_outliers(master_catalogue, col1, col2,\n",
     "                      ecol1, ecol2,\n",
     "                      flagcol1, flagcol2,\n",
     "                      labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
-    "        except KeyError:\n",
-    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))\n",
+    "                      \n",
     "                      \n",
     "        \n",
     "        # Tot mag\n",
     "        col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
     "        ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
     "        flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
-    "              \n",
-    "        try:\n",
-    "            master_catalogue = flag_outliers(master_catalogue, col1, col2, \n",
+    "                      \n",
+    "        master_catalogue = flag_outliers(master_catalogue, col1, col2, \n",
     "                      ecol1, ecol2,\n",
     "                      flagcol1, flagcol2,\n",
-    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))   \n",
-    "        except KeyError:\n",
-    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))           \n",
+    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))              \n",
     "                      "
    ]
   },
@@ -207,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
