--- a/dmu6/dmu6_v_ELAIS-N2/4_flags_elais-n2.ipynb
+++ b/dmu6/dmu6_v_ELAIS-N2/4_flags_elais-n2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -90,11 +90,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 144\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 146\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 227\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 249\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 201\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 215\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 137\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 131\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 71\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 65\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry catalogue\n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -126,11 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IRAC i1\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i2\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i3\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i4\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "irac_mag = 3.9000000001085695\n",
     "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
@@ -157,11 +208,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Megacam u (aperture) - WFC u (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam u (total) - WFC u (total):\n",
+      "  Number of outliers: 0\n",
+      "Megacam g (aperture) - WFC g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam g (total) - WFC g (total):\n",
+      "  Number of outliers: 13\n",
+      "GPC1 g (aperture) - WFC g (aperture):\n",
+      "  Number of outliers: 5\n",
+      "GPC1 g (total) - WFC g (total):\n",
+      "  Number of outliers: 3\n",
+      "GPC1 g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - Megacam g (total):\n",
+      "  Number of outliers: 76\n",
+      "Megacam r (aperture) - WFC r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam r (total) - WFC r (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (aperture) - WFC r (aperture):\n",
+      "  Number of outliers: 3\n",
+      "GPC1 r (total) - WFC r (total):\n",
+      "  Number of outliers: 2\n",
+      "GPC1 r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - Megacam r (total):\n",
+      "  Number of outliers: 194\n",
+      "One of m_ap_wfc_i and m_ap_megacam_i is not present in the catalogue.\n",
+      "Megacam i (total) - WFC i (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (aperture) - WFC i (aperture):\n",
+      "  Number of outliers: 22\n",
+      "GPC1 i (total) - WFC i (total):\n",
+      "  Number of outliers: 4\n",
+      "One of m_ap_megacam_i and m_ap_gpc1_i is not present in the catalogue.\n",
+      "GPC1 i (total) - Megacam i (total):\n",
+      "  Number of outliers: 0\n",
+      "Megacam z (aperture) - WFC z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam z (total) - WFC z (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (aperture) - WFC z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - WFC z (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - Megacam z (total):\n",
+      "  Number of outliers: 1\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -207,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
