--- a/dmu6/dmu6_v_GAMA-09/4_flags_gama09.ipynb
+++ b/dmu6/dmu6_v_GAMA-09/4_flags_gama09.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -93,11 +93,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 1486\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1633\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 1739\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 2045\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 1989\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 2110\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 1363\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1427\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 620\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 647\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry cat \n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -129,11 +161,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DECam g\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Total magnitude\n",
+      "    Number of flagged objects: 290\n",
+      "DECam r\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 207\n",
+      "DECam z\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 55\n"
+     ]
+    }
+   ],
    "source": [
     "decam_mag = 14.999935\n",
     "bands = [\"DECam g\", \"DECam r\", \"DECam z\"]\n",
@@ -145,7 +207,7 @@
     "    col = \"m_{}\".format(basecol)\n",
     "    flagcol = \"flag_{}\".format(basecol)\n",
     "    \n",
-    "    mask  = np.where((master_catalogue[col]  == decam_mag) or (master_catalogue[col] < 7))[0]\n",
+    "    mask  = np.where((master_catalogue[col]  == decam_mag) | (master_catalogue[col] < 7))[0]\n",
     "    \n",
     "    print('  Total magnitude')\n",
     "    flag_mag(flagcol, mask)"
@@ -160,11 +222,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OmegaCAM u (aperture) - Megacam u (aperture):\n",
+      "  Number of outliers: 4\n",
+      "OmegaCAM u (total) - Megacam u (total):\n",
+      "  Number of outliers: 53\n",
+      "DECam g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 120\n",
+      "DECam g (total) - Megacam g (total):\n",
+      "  Number of outliers: 1177\n",
+      "OmegaCAM g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 14\n",
+      "OmegaCAM g (total) - Megacam g (total):\n",
+      "  Number of outliers: 106\n",
+      "No sources have both Megacam g (aperture) and SUPRIME g (aperture) values.\n",
+      "\n",
+      "No sources have both Megacam g (total) and SUPRIME g (total) values.\n",
+      "\n",
+      "GPC1 g (aperture) - Megacam g (aperture):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 g (total) - Megacam g (total):\n",
+      "  Number of outliers: 7\n",
+      "OmegaCAM g (aperture) - DECam g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "OmegaCAM g (total) - DECam g (total):\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/herschelhelp_internal/herschelhelp_internal/flagging.py:151: RuntimeWarning: overflow encountered in power\n",
+      "  ichi2 = np.power(diff, 2) / (np.power(xerr, 2) + np.power(yerr, 2))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Number of outliers: 152\n",
+      "SUPRIME g (aperture) - DECam g (aperture):\n",
+      "  Number of outliers: 7\n",
+      "SUPRIME g (total) - DECam g (total):\n",
+      "  Number of outliers: 207\n",
+      "GPC1 g (aperture) - DECam g (aperture):\n",
+      "  Number of outliers: 3892\n",
+      "GPC1 g (total) - DECam g (total):\n",
+      "  Number of outliers: 81\n",
+      "SUPRIME g (aperture) - OmegaCAM g (aperture):\n",
+      "  Number of outliers: 31\n",
+      "SUPRIME g (total) - OmegaCAM g (total):\n",
+      "  Number of outliers: 349\n",
+      "GPC1 g (aperture) - OmegaCAM g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - OmegaCAM g (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (aperture) - SUPRIME g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - SUPRIME g (total):\n",
+      "  Number of outliers: 3\n",
+      "DECam r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "DECam r (total) - Megacam r (total):\n",
+      "  Number of outliers: 7\n",
+      "OmegaCAM r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 15\n",
+      "OmegaCAM r (total) - Megacam r (total):\n",
+      "  Number of outliers: 40\n",
+      "No sources have both Megacam r (aperture) and SUPRIME r (aperture) values.\n",
+      "\n",
+      "No sources have both Megacam r (total) and SUPRIME r (total) values.\n",
+      "\n",
+      "GPC1 r (aperture) - Megacam r (aperture):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 r (total) - Megacam r (total):\n",
+      "  Number of outliers: 7\n",
+      "OmegaCAM r (aperture) - DECam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "OmegaCAM r (total) - DECam r (total):\n",
+      "  Number of outliers: 2\n",
+      "SUPRIME r (aperture) - DECam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME r (total) - DECam r (total):\n",
+      "  Number of outliers: 4\n",
+      "GPC1 r (aperture) - DECam r (aperture):\n",
+      "  Number of outliers: 54\n",
+      "GPC1 r (total) - DECam r (total):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME r (aperture) - OmegaCAM r (aperture):\n",
+      "  Number of outliers: 3\n",
+      "SUPRIME r (total) - OmegaCAM r (total):\n",
+      "  Number of outliers: 129\n",
+      "GPC1 r (aperture) - OmegaCAM r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - OmegaCAM r (total):\n",
+      "  Number of outliers: 7\n",
+      "GPC1 r (aperture) - SUPRIME r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - SUPRIME r (total):\n",
+      "  Number of outliers: 4\n",
+      "OmegaCAM i (aperture) - Megacam i (aperture):\n",
+      "  Number of outliers: 8\n",
+      "OmegaCAM i (total) - Megacam i (total):\n",
+      "  Number of outliers: 27\n",
+      "No sources have both Megacam i (aperture) and SUPRIME i (aperture) values.\n",
+      "\n",
+      "No sources have both Megacam i (total) and SUPRIME i (total) values.\n",
+      "\n",
+      "GPC1 i (aperture) - Megacam i (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (total) - Megacam i (total):\n",
+      "  Number of outliers: 9\n",
+      "SUPRIME i (aperture) - OmegaCAM i (aperture):\n",
+      "  Number of outliers: 157\n",
+      "SUPRIME i (total) - OmegaCAM i (total):\n",
+      "  Number of outliers: 61\n",
+      "GPC1 i (aperture) - OmegaCAM i (aperture):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 i (total) - OmegaCAM i (total):\n",
+      "  Number of outliers: 13\n",
+      "GPC1 i (aperture) - SUPRIME i (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (total) - SUPRIME i (total):\n",
+      "  Number of outliers: 5\n",
+      "DECam z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "DECam z (total) - Megacam z (total):\n",
+      "  Number of outliers: 0\n",
+      "No sources have both Megacam z (aperture) and SUPRIME z (aperture) values.\n",
+      "\n",
+      "No sources have both Megacam z (total) and SUPRIME z (total) values.\n",
+      "\n",
+      "GPC1 z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - Megacam z (total):\n",
+      "  Number of outliers: 21\n",
+      "VISTA Z (aperture) - Megacam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "VISTA Z (total) - Megacam z (total):\n",
+      "  Number of outliers: 6\n",
+      "SUPRIME z (aperture) - DECam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME z (total) - DECam z (total):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 z (aperture) - DECam z (aperture):\n",
+      "  Number of outliers: 111\n",
+      "GPC1 z (total) - DECam z (total):\n",
+      "  Number of outliers: 1\n",
+      "VISTA Z (aperture) - DECam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "VISTA Z (total) - DECam z (total):\n",
+      "  Number of outliers: 400\n",
+      "GPC1 z (aperture) - SUPRIME z (aperture):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 z (total) - SUPRIME z (total):\n",
+      "  Number of outliers: 2\n",
+      "VISTA Z (aperture) - SUPRIME z (aperture):\n",
+      "  Number of outliers: 17\n",
+      "VISTA Z (total) - SUPRIME z (total):\n",
+      "  Number of outliers: 278\n",
+      "VISTA Z (aperture) - GPC1 z (aperture):\n",
+      "  Number of outliers: 83\n",
+      "VISTA Z (total) - GPC1 z (total):\n",
+      "  Number of outliers: 18\n",
+      "GPC1 y (aperture) - SUPRIME y (aperture):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 y (total) - SUPRIME y (total):\n",
+      "  Number of outliers: 0\n",
+      "VISTA Y (aperture) - SUPRIME y (aperture):\n",
+      "  Number of outliers: 4\n",
+      "VISTA Y (total) - SUPRIME y (total):\n",
+      "  Number of outliers: 31\n",
+      "UKIDSS Y (aperture) - SUPRIME y (aperture):\n",
+      "  Number of outliers: 55\n",
+      "UKIDSS Y (total) - SUPRIME y (total):\n",
+      "  Number of outliers: 33\n",
+      "VISTA Y (aperture) - GPC1 y (aperture):\n",
+      "  Number of outliers: 40\n",
+      "VISTA Y (total) - GPC1 y (total):\n",
+      "  Number of outliers: 0\n",
+      "UKIDSS Y (aperture) - GPC1 y (aperture):\n",
+      "  Number of outliers: 62\n",
+      "UKIDSS Y (total) - GPC1 y (total):\n",
+      "  Number of outliers: 77\n",
+      "UKIDSS Y (aperture) - VISTA Y (aperture):\n",
+      "  Number of outliers: 9\n",
+      "UKIDSS Y (total) - VISTA Y (total):\n",
+      "  Number of outliers: 9\n",
+      "VISTA J (aperture) - UKIDSS J (aperture):\n",
+      "  Number of outliers: 1661\n",
+      "VISTA J (total) - UKIDSS J (total):\n",
+      "  Number of outliers: 220\n",
+      "VISTA H (aperture) - UKIDSS H (aperture):\n",
+      "  Number of outliers: 2796\n",
+      "VISTA H (total) - UKIDSS H (total):\n",
+      "  Number of outliers: 813\n",
+      "VISTA Ks (aperture) - UKIDSS K (aperture):\n",
+      "  Number of outliers: 547\n",
+      "VISTA Ks (total) - UKIDSS K (total):\n",
+      "  Number of outliers: 327\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -210,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
