--- a/dmu6/dmu6_v_GAMA-15/4_flags_gama15.ipynb
+++ b/dmu6/dmu6_v_GAMA-15/4_flags_gama15.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -93,11 +93,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 679\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 714\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 973\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 998\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 1398\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1469\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 758\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 789\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 371\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 380\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry cat \n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -129,11 +161,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DECam g\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Total magnitude\n",
+      "    Number of flagged objects: 103\n",
+      "DECam r\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 100\n",
+      "DECam z\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 2\n"
+     ]
+    }
+   ],
    "source": [
     "decam_mag = 14.999935\n",
     "bands = [\"DECam g\", \"DECam r\", \"DECam z\"]\n",
@@ -145,7 +207,7 @@
     "    col = \"m_{}\".format(basecol)\n",
     "    flagcol = \"flag_{}\".format(basecol)\n",
     "    \n",
-    "    mask  = np.where((master_catalogue[col]  == decam_mag) or (master_catalogue[col] < 7))[0]\n",
+    "    mask  = np.where((master_catalogue[col]  == decam_mag) | (master_catalogue[col] < 7))[0]\n",
     "    \n",
     "    print('  Total magnitude')\n",
     "    flag_mag(flagcol, mask)"
@@ -160,11 +222,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One of m_ap_decam_g and m_ap_kids_g is not present in the catalogue.\n",
+      "One of m_decam_g and m_kids_g is not present in the catalogue.\n",
+      "SUPRIME g (aperture) - DECam g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME g (total) - DECam g (total):\n",
+      "  Number of outliers: 80\n",
+      "GPC1 g (aperture) - DECam g (aperture):\n",
+      "  Number of outliers: 167\n",
+      "GPC1 g (total) - DECam g (total):\n",
+      "  Number of outliers: 20\n",
+      "One of m_ap_kids_g and m_ap_suprime_g is not present in the catalogue.\n",
+      "One of m_kids_g and m_suprime_g is not present in the catalogue.\n",
+      "One of m_ap_kids_g and m_ap_gpc1_g is not present in the catalogue.\n",
+      "One of m_kids_g and m_gpc1_g is not present in the catalogue.\n",
+      "GPC1 g (aperture) - SUPRIME g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - SUPRIME g (total):\n",
+      "  Number of outliers: 1\n",
+      "One of m_ap_decam_r and m_ap_kids_r is not present in the catalogue.\n",
+      "One of m_decam_r and m_kids_r is not present in the catalogue.\n",
+      "SUPRIME r (aperture) - DECam r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME r (total) - DECam r (total):\n",
+      "  Number of outliers: 32\n",
+      "GPC1 r (aperture) - DECam r (aperture):\n",
+      "  Number of outliers: 376\n",
+      "GPC1 r (total) - DECam r (total):\n",
+      "  Number of outliers: 1\n",
+      "One of m_ap_kids_r and m_ap_suprime_r is not present in the catalogue.\n",
+      "One of m_kids_r and m_suprime_r is not present in the catalogue.\n",
+      "One of m_ap_kids_r and m_ap_gpc1_r is not present in the catalogue.\n",
+      "One of m_kids_r and m_gpc1_r is not present in the catalogue.\n",
+      "GPC1 r (aperture) - SUPRIME r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - SUPRIME r (total):\n",
+      "  Number of outliers: 5\n",
+      "One of m_ap_kids_i and m_ap_suprime_i is not present in the catalogue.\n",
+      "One of m_kids_i and m_suprime_i is not present in the catalogue.\n",
+      "One of m_ap_kids_i and m_ap_gpc1_i is not present in the catalogue.\n",
+      "One of m_kids_i and m_gpc1_i is not present in the catalogue.\n",
+      "GPC1 i (aperture) - SUPRIME i (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 i (total) - SUPRIME i (total):\n",
+      "  Number of outliers: 48\n",
+      "SUPRIME z (aperture) - DECam z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "SUPRIME z (total) - DECam z (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (aperture) - DECam z (aperture):\n",
+      "  Number of outliers: 6851\n",
+      "GPC1 z (total) - DECam z (total):\n",
+      "  Number of outliers: 0\n",
+      "One of m_ap_decam_z and m_ap_vircam_z is not present in the catalogue.\n",
+      "One of m_decam_z and m_vircam_z is not present in the catalogue.\n",
+      "GPC1 z (aperture) - SUPRIME z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - SUPRIME z (total):\n",
+      "  Number of outliers: 2\n",
+      "One of m_ap_suprime_z and m_ap_vircam_z is not present in the catalogue.\n",
+      "One of m_suprime_z and m_vircam_z is not present in the catalogue.\n",
+      "One of m_ap_gpc1_z and m_ap_vircam_z is not present in the catalogue.\n",
+      "One of m_gpc1_z and m_vircam_z is not present in the catalogue.\n",
+      "GPC1 y (aperture) - SUPRIME y (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 y (total) - SUPRIME y (total):\n",
+      "  Number of outliers: 1\n",
+      "One of m_ap_suprime_y and m_ap_vircam_y is not present in the catalogue.\n",
+      "One of m_suprime_y and m_vircam_y is not present in the catalogue.\n",
+      "UKIDSS Y (aperture) - SUPRIME y (aperture):\n",
+      "  Number of outliers: 0\n",
+      "UKIDSS Y (total) - SUPRIME y (total):\n",
+      "  Number of outliers: 6\n",
+      "One of m_ap_gpc1_y and m_ap_vircam_y is not present in the catalogue.\n",
+      "One of m_gpc1_y and m_vircam_y is not present in the catalogue.\n",
+      "UKIDSS Y (aperture) - GPC1 y (aperture):\n",
+      "  Number of outliers: 56\n",
+      "UKIDSS Y (total) - GPC1 y (total):\n",
+      "  Number of outliers: 74\n",
+      "One of m_ap_vircam_y and m_ap_ukidss_y is not present in the catalogue.\n",
+      "One of m_vircam_y and m_ukidss_y is not present in the catalogue.\n",
+      "One of m_ap_ukidss_j and m_ap_vircam_j is not present in the catalogue.\n",
+      "One of m_ukidss_j and m_vircam_j is not present in the catalogue.\n",
+      "One of m_ap_ukidss_h and m_ap_vircam_h is not present in the catalogue.\n",
+      "One of m_ukidss_h and m_vircam_h is not present in the catalogue.\n",
+      "One of m_ap_ukidss_k and m_ap_vircam_k is not present in the catalogue.\n",
+      "One of m_ukidss_k and m_vircam_k is not present in the catalogue.\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -210,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
