--- a/dmu6/dmu6_v_Lockman-SWIRE/4_flags_lockman-swire.ipynb
+++ b/dmu6/dmu6_v_Lockman-SWIRE/4_flags_lockman-swire.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -90,11 +90,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 284\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 296\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 353\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 375\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 276\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 274\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 203\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 207\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 107\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 107\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry catalogue\n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -126,11 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IRAC i1\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i2\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i3\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n",
+      "IRAC i4\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 0\n"
+     ]
+    }
+   ],
    "source": [
     "irac_mag = 3.9000000001085695\n",
     "bands = [\"IRAC i1\", \"IRAC i2\", \"IRAC i3\", \"IRAC i4\"]\n",
@@ -157,11 +208,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Megacam u (aperture) - WFC u (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam u (total) - WFC u (total):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (aperture) - WFC g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 g (total) - WFC g (total):\n",
+      "  Number of outliers: 0\n",
+      "Megacam g (aperture) - WFC g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam g (total) - WFC g (total):\n",
+      "  Number of outliers: 29\n",
+      "Megacam g (aperture) - GPC1 g (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam g (total) - GPC1 g (total):\n",
+      "  Number of outliers: 14\n",
+      "GPC1 r (aperture) - WFC r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 r (total) - WFC r (total):\n",
+      "  Number of outliers: 3\n",
+      "Megacam r (aperture) - WFC r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam r (total) - WFC r (total):\n",
+      "  Number of outliers: 37\n",
+      "Megacam r (aperture) - GPC1 r (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam r (total) - GPC1 r (total):\n",
+      "  Number of outliers: 76\n",
+      "GPC1 i (aperture) - WFC i (aperture):\n",
+      "  Number of outliers: 8\n",
+      "GPC1 i (total) - WFC i (total):\n",
+      "  Number of outliers: 0\n",
+      "One of m_ap_wfc_i and m_ap_megacam_i is not present in the catalogue.\n",
+      "Megacam i (total) - WFC i (total):\n",
+      "  Number of outliers: 1\n",
+      "One of m_ap_gpc1_i and m_ap_megacam_i is not present in the catalogue.\n",
+      "Megacam i (total) - GPC1 i (total):\n",
+      "  Number of outliers: 1\n",
+      "GPC1 z (aperture) - WFC z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "GPC1 z (total) - WFC z (total):\n",
+      "  Number of outliers: 0\n",
+      "Megacam z (aperture) - WFC z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam z (total) - WFC z (total):\n",
+      "  Number of outliers: 0\n",
+      "Megacam z (aperture) - GPC1 z (aperture):\n",
+      "  Number of outliers: 0\n",
+      "Megacam z (total) - GPC1 z (total):\n",
+      "  Number of outliers: 9\n",
+      "One of m_ap_gpc1_y and m_ap_megacam_y is not present in the catalogue.\n",
+      "Megacam y (total) - GPC1 y (total):\n",
+      "  Number of outliers: 0\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -207,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
