--- a/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
+++ b/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -89,11 +89,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPC1 g\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 1408\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1439\n",
+      "GPC1 r\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 2057\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 2161\n",
+      "GPC1 i\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 2167\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 2228\n",
+      "GPC1 z\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 1556\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1562\n",
+      "GPC1 y\n",
+      "  Aperture magnitude\n",
+      "    Number of flagged objects: 641\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 628\n"
+     ]
+    }
+   ],
    "source": [
     "## dmu0: Pan-STARRS forced photometry cat \n",
     "gpc1_err = 0.0010860000038519502\n",
@@ -125,11 +157,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DECam z\n",
+      "  Total magnitude\n",
+      "    Number of flagged objects: 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
+     ]
+    }
+   ],
    "source": [
     "decam_mag = 14.999935\n",
     "bands = [\"DECam z\"]\n",
@@ -156,11 +206,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90prime g (aperture) - GPC1 g (aperture):\n",
+      "  Number of outliers: 1899\n",
+      "90prime g (total) - GPC1 g (total):\n",
+      "  Number of outliers: 316\n",
+      "90prime r (aperture) - GPC1 r (aperture):\n",
+      "  Number of outliers: 3898\n",
+      "90prime r (total) - GPC1 r (total):\n",
+      "  Number of outliers: 6\n",
+      "GPC1 z (aperture) - DECam z (aperture):\n",
+      "  Number of outliers: 8938\n",
+      "GPC1 z (total) - DECam z (total):\n",
+      "  Number of outliers: 5\n",
+      "Mosaic z (aperture) - DECam z (aperture):\n",
+      "  Number of outliers: 1202\n",
+      "Mosaic z (total) - DECam z (total):\n",
+      "  Number of outliers: 13\n",
+      "Mosaic z (aperture) - GPC1 z (aperture):\n",
+      "  Number of outliers: 3902\n",
+      "Mosaic z (total) - GPC1 z (total):\n",
+      "  Number of outliers: 0\n",
+      "UKIDSS Y (aperture) - GPC1 y (aperture):\n",
+      "  Number of outliers: 102\n",
+      "UKIDSS Y (total) - GPC1 y (total):\n",
+      "  Number of outliers: 291\n"
+     ]
+    }
+   ],
    "source": [
     "for band_of_a_kind in all_bands:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
@@ -206,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
